# hotline

./: .gitignore  CMakeLists.txt  README.md
src/: Action.h  ActionManager.cpp  ActionManager.h  ActionSet.cpp  ActionSet.h  ArgProvider.h  FuzzyScorer.cpp  FuzzyScorer.h  Hotline.cpp  Hotline.h  IActionFrontend.h  ProviderWindow.cpp  ProviderWindow.h  main.cpp
src/search/: FuzzyScorer.cpp  FuzzyScorer.h
